--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ img {
   width: 16px;
   height: 12px;
 
-  background-image: url(../images/icons.svg/envelope1.svg);
+  background-image: url(../images/icons.svg/envelope.svg);
 }
 
 .icon-tel::before {
@@ -122,7 +122,7 @@ img {
   height: 16px;
 
   display: inline-flex;
-  background-image: url(../images/icons.svg/smartphone1.svg);
+  background-image: url(../images/icons.svg/smartphone.svg);
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
